@@ -2,13 +2,15 @@
 """
 
 from DateTime import DateTime
+from Products.CMFCore.utils import getToolByName
 from Products.ATVocabularyManager.namedvocabulary import NamedVocabulary
 from Products.Archetypes.interfaces import IBaseObject
 from Products.CMFPlone.utils import getToolByName
+from eea.versions.interfaces import IGetVersions
 from eea.workflow.interfaces import IObjectArchived, IObjectArchivator
 from persistent import Persistent
 from zope.annotation.factory import factory
-from zope.component import adapts
+from zope.component import adapts, queryAdapter
 from zope.interface import implements, alsoProvides, noLongerProvides
 from zope.event import notify
 from z3c.caching.purge import Purge
@@ -112,3 +114,41 @@ class ObjectArchivedAnnotationStorage(Persistent):
 
 
 archive_annotation_storage = factory(ObjectArchivedAnnotationStorage, key="eea.workflow.archive")
+
+# helper functions
+def archive_object(context, **kwargs):
+    """ Archive given context
+    """
+    storage = queryAdapter(context, IObjectArchivator)
+    storage.archive(context, **kwargs)
+
+
+def archive_obj_and_children(context, **kwargs):
+    """ Archive given context and it's children
+    """
+    catalog = getToolByName(context, 'portal_catalog')
+    query = {'path': '/'.join(context.getPhysicalPath())}
+    brains = catalog.searchResults(query)
+
+    for brain in brains:
+        obj = brain.getObject()
+        storage = queryAdapter(obj, IObjectArchivator)
+        storage.archive(obj, **kwargs)
+
+
+def archive_previous_versions(context, also_children=False, **kwargs):
+    """ Archive previous versions of given object
+    """
+    adapter = IGetVersions(context)
+    versions = adapter.versions()
+    previous_versions = []
+    uid = context.UID()
+    for version in versions:
+        if version.UID() == uid:
+            break
+        previous_versions.append(version)
+    for obj in previous_versions:
+        if also_children:
+            archive_obj_and_children(obj, **kwargs)
+        storage = queryAdapter(obj, IObjectArchivator)
+        storage.archive(obj, **kwargs)
