@@ -16,6 +16,10 @@
          id="workflow_archive_recurse" />
   <label for="workflow_archive_recurse">Apply archiving on all children/content of this object</label>
   <br/>
+  <input name="workflow_archive_previous_versions" type="checkbox" checked="checked" value="on"
+           id="workflow_archive_previous_versions" />
+  <label for="workflow_archive_previous_versions">Archive also older versions of this object</label>
+  <br/>
   <h3 id="workflow_initiator_label">Request Initiator:</h3>
   <label>Staff name who initially requested and/or approved this page to be archived/expired.</label>
   <br/>
